--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -141,19 +141,19 @@
 
       <!-- Other artwork information (views, bookmarks, likes, creation date) -->
       <div class="d-flex flex-wrap text-muted small me-2">
-        <div class="me-4 mb-2">
+        <div class="me-3 mb-2">
             <i class="bi bi-eye me-1"></i>
             <span>{{- .Views }}</span>
         </div>
-        <div class="me-4 mb-2">
+        <div class="me-3 mb-2">
             <i class="bi bi-heart-fill me-1"></i>
             <span>{{- .Bookmarks }}</span>
         </div>
-        <div class="me-4 mb-2">
-            <i class="bi bi-hand-thumbs-up me-1"></i>
+        <div class="me-3 mb-2">
+            <i class="bi bi-hand-thumbs-up-fill me-1"></i>
             <span>{{- .Likes }}</span>
         </div>
-        <div class="me-4 mb-2">
+        <div class="me-3 mb-2">
             <i class="bi bi-calendar me-1"></i>
             <span>{{- parseTime: .Date }}</span>
         </div>
