--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -123,7 +123,7 @@
 
       <!-- Tag information -->
       <!-- text-start ensures that the content within non-emphasized tags is left-aligned while still maintaining proper wrapping behavior -->
-      <div class="d-flex flex-wrap align-items-center mb-2">
+      <div class="d-flex flex-wrap align-items-center mb-3">
         {{- if .AiType == 2 }}
         <span class="badge bg-warning text-dark me-2 mb-2">AI-generated</span>
         {{- end }}
@@ -141,24 +141,24 @@
 
       <!-- Other artwork information (views, bookmarks, likes, creation date) -->
       <div class="d-flex flex-wrap text-muted small me-2">
-        <div class="me-3 mb-2">
+        <div class="me-3 mb-2 mb-lg-0">
             <i class="bi bi-eye me-1"></i>
             <span>{{- .Views }}</span>
         </div>
-        <div class="me-3 mb-2">
+        <div class="me-3 mb-2 mb-lg-0">
             <i class="bi bi-heart-fill me-1"></i>
             <span>{{- .Bookmarks }}</span>
         </div>
-        <div class="me-3 mb-2">
+        <div class="me-3 mb-2 mb-lg-0">
             <i class="bi bi-hand-thumbs-up-fill me-1"></i>
             <span>{{- .Likes }}</span>
         </div>
-        <div class="me-3 mb-2">
+        <div class="me-3 mb-2 mb-lg-0">
             <i class="bi bi-calendar me-1"></i>
             <span>{{- parseTime: .Date }}</span>
         </div>
         {{- if .Images[0].Width != 0 && .Images[0].Height != 0 }}
-        <div class="mb-2">
+        <div>
             <i class="bi bi-arrows-angle-expand me-1"></i>
             <span>{{ .Images[0].Width }}x{{ .Images[0].Height }}</span>
         </div>
