--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -41,6 +41,11 @@
       </div>
     </div>
 
+    <!-- Comments section -->
+    <!--
+    TODO: currently duplicated unnecessarily across artwork.jet.html and novel.jet.html
+          Need to extract this out to a block that takes parameters
+    -->
     <div class="col-12 col-lg-6">
       <div class="custom-card">
         <div class="custom-card-body bg-charcoal-surface1 p-4 pb-0">
@@ -104,6 +109,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
 </div>
