--- a/assets/views/error.jet.html
+++ b/assets/views/error.jet.html
@@ -6,8 +6,7 @@
     <br />
     {{- .Error }}
     <hr />
-    <p>If you think this error should not occur, you can help
-        us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
+    <p>If you think this error should not occur, you can help us by submitting an issue to the <a href="https://codeberg.org/VnPower/PixivFE/issues/new">upstream repository</a>!
     </p>
 </div>
 {{- end }}
