--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -3,8 +3,7 @@
 <div class="container" data-hx-boost="false">
   <h1>Settings</h1>
   <p>
-    PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your
-    preferences, which you can change on this page to customize your experience on this instance.
+    PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your preferences, which you can change on this page to customize your experience on this instance.
   </p>
   <!-- General settings -->
   <div class="tabs">
@@ -19,9 +18,7 @@
         <li>Like/Bookmark</li>
       </ul>
       <p>
-        Log in with your Pixiv account's cookie to access features above.
-        To learn how to obtain your cookie, please see
-        <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
+        Log in with your Pixiv account's cookie to access features above. To learn how to obtain your cookie, please see <a href="https://pixivfe-docs.pages.dev/obtaining-pixivfe-token/">the guide on obtaining your PixivFE token</a>.
       </p>
       <p>
         Cookies will be saved on your browser, and will expire after a fixed period of time.
@@ -33,8 +30,7 @@
       <hr />
       <h2>Logout</h2>
       <p>
-        To securely end your session, click the 'Logout!' button. This will
-        immediately remove your session token.
+        To securely end your session, click the 'Logout!' button. This will immediately remove your session token.
       </p>
       <form action="/settings/logout" method="post">
         <input type="submit" value="Logout!" />
@@ -47,10 +43,7 @@
 
       <h2>Image proxy server</h2>
       <p>
-        Choose how images are loaded in PixivFE by selecting either the built-in
-        proxy or one of the provided external proxy servers. If you prefer, you can
-        also specify a custom proxy server by entering its URL and clicking 'Use
-        Custom Proxy'.
+        Choose how images are loaded in PixivFE by selecting either the built-in proxy or one of the provided external proxy servers. If you prefer, you can also specify a custom proxy server by entering its URL and clicking 'Use Custom Proxy'.
       </p>
       <div class="form-field">
         <form action="/settings/imageServer" method="post">
@@ -171,8 +164,7 @@
   <h2>Current cookie values</h2>
   <div>
     <h3>Cookie list</h3>
-    Please note that some cookies here such as ShowArtR18,
-    ShowArtR18G, and ShowArtAI are for features still under development.
+    Please note that some cookies here such as ShowArtR18, ShowArtR18G, and ShowArtAI are for features still under development.
   </div>
   {{- range k, v := CookieList }}
   <div class="settings-set-cookie">
@@ -189,8 +181,7 @@
 
     <h3>Raw settings</h3>
     <p>
-      You can save your current cookie values to quickly set your settings on other compatible instances,
-      or if the current instance's cookies went expired.
+      You can save your current cookie values to quickly set your settings on other compatible instances, or if the current instance's cookies went expired.
     </p>
     <p>Invalid values will be ignored.</p>
     <form action="/settings/raw" method="post">
