--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -13017,4 +13017,28 @@ h6, .h6 {
   direction: rtl;
 }
 
+#loading-indicator {
+  height: 4px;
+  animation: rolling-something 1s linear infinite;
+  background-image: repeating-linear-gradient(-0.25turn, #118bee 0vw, transparent 40vw);
+  background-size: 80vw auto;
+  will-change: opacity;
+  transition: opacity 0.3s;
+  opacity: 0;
+}
+#loading-indicator.htmx-request {
+  opacity: 1;
+  transition-duration: 1s;
+  transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@keyframes rolling-something {
+  0% {
+    background-position-x: 0vw;
+  }
+  100% {
+    background-position-x: 40vw;
+  }
+}
+
 /*# sourceMappingURL=bootstrap-style.css.map */
