--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -277,3 +277,34 @@ h6 {
   text-orientation: upright;
   direction: rtl;
 }
+
+/// Loading indicator for hx-requests
+/// ref: https://stackoverflow.com/questions/63787241/css-how-to-create-an-infinitely-moving-repeating-linear-gradient/63787567#63787567
+#loading-indicator {
+  height: 4px;
+
+  /// background-size: 200px auto;
+  animation: rolling-something 1s linear infinite;
+  background-image: repeating-linear-gradient(-0.25turn, #118bee 0vw, transparent 40vw);
+  background-size: 80vw auto;
+
+  will-change: opacity;
+  transition: opacity 0.3s;
+  opacity: 0;
+
+  &.htmx-request {
+    opacity: 1;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  }
+}
+
+@keyframes rolling-something {
+  0% {
+    background-position-x: 0vw
+  }
+
+  100% {
+    background-position-x: 40vw
+  }
+}
