loading-indicator rework draft

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -62,7 +62,7 @@
 </head>
 
 <body class="bg-black">
-  <div id="loading-indicator" class="fixed-top z-3"></div>
+  <div id="loading-indicator" class="fixed-top z-3" aria-live="polite"></div>
   <!-- mb-4 for spacing between the navbar and main content -->
   <nav class="navbar bg-charcoal-surface1 py-3 mb-4" id="main-navbar">
     <div class="container">
