--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -14,7 +14,7 @@
 
   <link href="/img/favicon.png" rel="icon" />
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="/css/bootstrap-icons-1.11.3/bootstrap-icons.min.css">
 
   <!-- TODO: figure out custom themes (e.g. charcoal theme) -->
   <link href="/css/bootstrap-style.css" rel="stylesheet" />
