--- a/assets/views/blocks/underlinenav.jet.html
+++ b/assets/views/blocks/underlinenav.jet.html
@@ -24,11 +24,17 @@
     Tip: For absolute URI paths, start the baseURL with a forward slash.
 *}
 
-{{- block UnderlineNav(baseURL, paths, names, activeState) }}
+{{- block UnderlineNav(baseURL, paths, names, activeState="") }}
 <ul class="nav nav-underline">
     {{- range i, k := paths }}
         <li class="nav-item">
-            <a class="fs-6 nav-link fw-bold {{ activeState == k ? "active border-custom-color" : "text-muted" }} border-4 px-3" {{ activeState == k ? `aria-current="page"` : "" }} href="{{ baseURL }}{{k}}">{{ names[i] }}</a>
+            <a class="fs-6 nav-link fw-bold
+                {{ activeState == k ? "active border-custom-color" : "text-muted" }}
+                border-4 px-3"
+                {{ activeState == k ? `aria-current="page"` : "" }}
+                href="{{ baseURL }}{{k}}">
+                {{ names[i] }}
+            </a>
         </li>
     {{- end }}
 </ul>
